unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/CMPL123CME__Complaint_Code__c.object-meta.xml
<CustomObject>
    <description>Code Name</description>
    <label>Complaint Code</label>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>