unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description__c</fullName>
        <description>Description about code</description>
        <inlineHelpText>Description about code</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>