unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Inactive__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Activates or deactivates this complaint code.</description>
        <inlineHelpText>Activates or deactivates this complaint code.</inlineHelpText>
        <label>Complaint Code Inactive</label>
        <type>Checkbox</type>
    </CustomField>