unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Medra_Code_Detail__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Medra_Code_Detail__c</fullName>
        <externalId>true</externalId>
        <label>MedDRA External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>