unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>