unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Name_With_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Name_With_Code__c</fullName>
        <formula>Name &amp; " - "&amp; CMPL123CME__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name With Code</label>
        <type>Text</type>
    </CustomField>