unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Parent_Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Parent_Active__c</fullName>
        <description>Parent Complaint code active status (if any)</description>
        <formula>IF(ISBLANK(CMPL123CME__ParentCCode__c), false, NOT(CMPL123CME__ParentCCode__r.CMPL123CME__Inactive__c))</formula>
        <inlineHelpText>Parent Complaint code active status (if any)</inlineHelpText>
        <label>Parent Active?</label>
        <type>Checkbox</type>
    </CustomField>