unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Parent_CCode__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Parent_CCode__c</fullName>
        <label>Parent Code</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>