unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__ParentCCode__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__ParentCCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Complaint Code</description>
        <inlineHelpText>Parent Complaint Code</inlineHelpText>
        <label>Parent Code (Lookup)</label>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Complaint Codes</relationshipLabel>
        <relationshipName>Complaint_Codes</relationshipName>
        <type>Lookup</type>
    </CustomField>