unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Secondary_Code__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Secondary_Code__c</fullName>
        <label>Secondary Code</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>