unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Sub_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Sub_Type__c</fullName>
        <label>Sub Type</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>