unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SYMPTOM CODE</fullName>
                </value>
                <value>
                    <fullName>ANALYSIS CODE</fullName>
                </value>
                <value>
                    <fullName>PATIENT CODE</fullName>
                </value>
                <value>
                    <fullName>DEVICE CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL METHOD CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL RESULT CODE</fullName>
                </value>
                <value>
                    <fullName>EVAL CONCLUSION CODE</fullName>
                </value>
                <value>
                    <fullName>COMPLAINT CODE</fullName>
                </value>
                <value>
                    <fullName>ROOT CAUSE CODE</fullName>
                </value>
                <value>
                    <fullName>FINDING CODE</fullName>
                </value>
                <value>
                    <fullName>MEDDRA CODE</fullName>
                </value>
                <value>
                    <fullName>COMPONENT CODE</fullName>
                </value>
                <value>
                    <fullName>COUNTRY CODE</fullName>
                </value>
                <value>
                    <fullName>STATE CODE</fullName>
                </value>
                <value>
                    <fullName>PRO CODE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>