unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/fields/CMPL123CME__Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Version__c</fullName>
        <description>Version</description>
        <inlineHelpText>Version</inlineHelpText>
        <label>Version</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>