unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/listViews/CMPL123CME__All.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__All</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>