unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/listViews/CMPL123CME__EVAL_METHOD_CODE.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__EVAL_METHOD_CODE</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL METHOD CODE</value>
        </filters>
        <label>EVAL METHOD CODES</label>
    </ListView>