unpackaged/main/default/objects/CMPL123CME__Complaint_Code__c/listViews/CMPL123CME__STATE_CODES.listView-meta.xml
<ListView>
        <fullName>CMPL123CME__STATE_CODES</fullName>
        <columns>CMPL123CME__Name__c</columns>
        <columns>NAME</columns>
        <columns>CMPL123CME__Type__c</columns>
        <columns>CMPL123CME__Description__c</columns>
        <columns>CMPL123CME__Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>STATE CODE</value>
        </filters>
        <label>STATE CODES</label>
    </ListView>